--- a/app/client/dispense-log.css
+++ b/app/client/dispense-log.css
@@ -12,3 +12,18 @@
   background-color: rgba(29, 62, 102, 0.5);
   border-radius: 50%;
 }
+
+/* modal css */
+#dispense-info span.header {
+  display: inline-block;
+  width: 200px;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+#dispense-info hr {
+  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
