--- a/app/client/dispense-log.css
+++ b/app/client/dispense-log.css
@@ -17,13 +17,22 @@
 #dispense-info span.header {
   display: inline-block;
   width: 200px;
-  font-size: 1em;
-  font-weight: bold;
 }
 
-#dispense-info hr {
+#dispense-info textarea {
+  width: 100%;
+}
+
+#dispense-info table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#dispense-info table tr {
+  vertical-align: top;
   border-bottom: 1px solid rgba(34, 36, 38, 0.15);
-  border-top: none;
-  border-left: none;
-  border-right: none;
+}
+
+#dispense-info table td {
+  padding: 10px 0;
 }
