--- a/app/client/info-modal.css
+++ b/app/client/info-modal.css
@@ -20,3 +20,13 @@
 .info-modal table td {
     padding: 10px 0;
 }
+
+.info-modal .ui.input, .ui.selection {
+    width: calc(100% - 200px);
+    /* height: 20px;
+    min-height: 20px; */
+}
+
+.info-modal table td div {
+    margin-bottom: 4px;
+}
