finish manage DB UI
basic

--- a/app/client/manage-db.css
+++ b/app/client/manage-db.css
@@ -1,5 +1,6 @@
 #manage-database .ui.card .description {
+    min-height: 120px;
     display: flex;
     flex-direction: column;
-    
+    justify-content: flex-end;
 }
