--- a/app/client/manage.css
+++ b/app/client/manage.css
@@ -2,8 +2,18 @@
   min-height: 500px;
 }
 
+.manage-tab .ui.list .content {
+  display: table-cell;
+  width: 100%;
+}
+
+.manage-tab .ui.list .content .ui.input {
+  width: 95%;
+  height: 1em;
+}
+
 .manage-tab .ui.list i {
-  float: right;
+  /* float: right; */
   cursor: pointer;
 }
 
@@ -16,22 +26,22 @@
   display: flex;
 }
 
-.manage-tab .ui.input {
+.manage-tab .controls .ui.input {
   padding-right: 3rem;
   flex: 4 1 0;
 }
 
-.manage-tab .ui.button {
+.manage-tab .controls .ui.button {
   flex: 1 1 0;
   background-color: rgb(29, 62, 102);
   color: white;
 }
 
-.manage-tab .ui.input input {
+.manage-tab .controls .ui.input input {
   background-color: #dde0e8;
 }
 
-.manage-tab .ui.input ::placeholder {
+.manage-tab .controls .ui.input ::placeholder {
   color: grey;
 }
 
