--- a/app/client/manage-users.css
+++ b/app/client/manage-users.css
@@ -69,7 +69,7 @@
 #manage-users .delete-user {
     cursor: pointer;
     text-decoration: underline;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 #manage-users .ui.inline.dropdown > .text {
