--- a/app/client/manage-db.css
+++ b/app/client/manage-db.css
@@ -20,7 +20,7 @@
     color: #db2828;
 }
 #manage-database table tbody tr td:nth-child(4) span {
-    color: #2185d0;
+    color: #21ba45;
 }
 
 #manage-database .ui.segments .ui.segment:nth-child(2) {
