--- a/app/client/status.css
+++ b/app/client/status.css
@@ -57,6 +57,33 @@
   width: 50%;
 }
 
+.status-tab div.filters {
+  margin-top: 1em;
+  display: flex;
+  column-gap: 1em;
+}
+
+.status-tab div.filters > * {
+  flex: 1 1 0;
+}
+
+.status-tab div.filters > * {
+  background-color: #1D3E66;
+  color: white;
+  font-weight: 700;
+  padding: 0.5em;
+  border-radius: 0.5em;
+}
+
+.status-tab div.filters > * > div {
+  padding-left: 0.25em;
+}
+
+.status-tab div.filters > * > .ui.search.dropdown > input.search {
+  min-width: 5em; /* temp. fix to squashing */
+  color: white;
+}
+
 #status .ui.tabular.menu {
   padding-right: 25%;
 }
