--- a/app/client/status.css
+++ b/app/client/status.css
@@ -62,6 +62,12 @@
   display: flex;
   column-gap: 1em;
 }
+.status-tab div.filters.vaccine {
+  width: 75%;
+}
+.status-tab div.filters.supply {
+  width: 50%;
+}
 
 .status-tab div.filters > * {
   flex: 1 1 0;
