--- a/app/client/status.css
+++ b/app/client/status.css
@@ -90,6 +90,10 @@
   color: white;
 }
 
+.status-tab div.sub.header {
+  font-style: italic;
+}
+
 #status .ui.tabular.menu {
   padding-right: 25%;
 }
