--- a/app/client/landing.css
+++ b/app/client/landing.css
@@ -18,25 +18,28 @@
     text-shadow: 2px 2px 2px darkolivegreen;
     color: white;
     text-align: center;
-    /* margin-top: calc(50vh - 72px); */
     margin-top: 2em;
 }
 
 #landing .button-group {
     display: flex;
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 0 5em;
 }
 
 #landing .button-group > * {
     flex-basis: 10em;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 /* phones */
 @media only screen and (max-width: 767px) {
     #landing {
         font-size: 0.5rem;
+    }
+
+    #landing .button-group > * {
+        flex-grow: 1;
     }
 }
