--- a/app/client/status.css
+++ b/app/client/status.css
@@ -94,6 +94,10 @@
   font-style: italic;
 }
 
+.status-tab .ui.toggle.checkbox {
+  margin-top: 1em;
+}
+
 #status .ui.tabular.menu {
   padding-right: 25%;
 }
