represent generic and brand names
make brand name optional for drugs
link brand names to a generic name

--- a/app/client/manage.css
+++ b/app/client/manage.css
@@ -7,6 +7,13 @@
   width: 100%;
 }
 
+.manage-tab .ui.list .list-header, .manage-tab .ui.list .list-item {
+  display: flex;
+}
+.manage-tab .ui.list .list-header > *, .manage-tab .ui.list .list-item > *:not(i) {
+  width: 47.5%;
+}
+
 .manage-tab .ui.list .content .ui.input {
   width: 95%;
   height: 1em;
