--- a/app/client/footer.css
+++ b/app/client/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #1D3E66;
+    background-color: #2f4c58;
     color: white;
     text-align: center;
     padding: 1em 0;
