--- a/app/client/style.css
+++ b/app/client/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
  
 body {
-  background-color: #C1D9B1 !important;
+  background-color: #c1d9b1 !important;
 }
 
 * {
