--- a/app/client/add.css
+++ b/app/client/add.css
@@ -38,7 +38,7 @@
   min-width: 10em;
   border-radius: 500rem;
   padding: 1em 1.5em;
-  background-color: rgb(29, 62, 102);
+  background-color: #2f4c58;
   color: white;
 }
 
@@ -46,8 +46,8 @@
   min-width: 10em;
   border-radius: 500rem;
   padding: 1em 1.5em;
-  background-color: #C1D9B1;
-  color: rgb(29, 62, 102);
+  background-color: #c1d9b1;
+  color: #2f4c58;
 }
 
 #add-form input, #add-form .ui.selection.dropdown, #add-form textarea {
