--- a/app/client/manage.css
+++ b/app/client/manage.css
@@ -44,7 +44,7 @@
 
 .manage-tab .controls .ui.button {
   flex: 1 1 0;
-  background-color: rgb(29, 62, 102);
+  background-color: #2f4c58;
   color: white;
   margin: 0;
 }
