--- a/app/client/status.css
+++ b/app/client/status.css
@@ -72,7 +72,7 @@
 .status-tab div.filters > * {
   flex: 1 1 0;
 
-  background-color: #1D3E66;
+  background-color: #2f4c58;
   color: white;
   font-weight: 700;
   padding: 0.5em;
